# Hhackathon-app

./: .gitignore  App.tsx  README.md  app.config.ts  app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rosy-zoo-424212-m4-000403f8c19e.json  rosy-zoo-424212-m4-62c1c14a982b.json
apps/api/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml  rosy-zoo-424212-m4-000403f8c19e.json
apps/api/api/: config.py  main.py
apps/api/api/models/: schemas.py
apps/api/api/routers/: __init__.py  livekit.py  navigation.py  tts.py
apps/api/api/services/: directions.py  livekit.py  navigation.py  tts.py
apps/api/api/workers/: vision_supervisor.py
apps/api/tests/: test_health.py
apps/mobile/: .env  .env.example  App.tsx  README.md  app.config.ts  eas.json  package.json
apps/mobile/src/components/: StatusChip.tsx
apps/mobile/src/hooks/: useLiveKitSession.ts  useNavigationDecisions.ts  useRouteGuidance.ts
apps/mobile/src/utils/: serverSpeech.ts  voiceAssistant.ts
src/components/: AssistiveButton.tsx  InfoCard.tsx
src/hooks/: useAccessibleLocation.ts
src/theme/: colors.ts
src/utils/: voiceAssistant.ts
